[gd_scene load_steps=3 format=3 uid="uid://c8idetpqy80nc"]

[ext_resource type="Script" uid="uid://chvlqurhhbecx" path="res://scripts/ui/employees/employee_list.gd" id="1_w1sdr"]
[ext_resource type="PackedScene" uid="uid://cwltwoexcf05o" path="res://scenes/ui/common/navigation_bar.tscn" id="2_rqhvb"]

[node name="EmployeeList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1sdr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.952941, 0.964706, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="NavigationBar" parent="VBoxContainer" instance=ExtResource("2_rqhvb")]
layout_mode = 2

[node name="SearchPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SearchPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SearchLabel" type="Label" parent="VBoxContainer/SearchPanel/HBoxContainer"]
layout_mode = 2
text = "Search:"

[node name="SearchBar" type="LineEdit" parent="VBoxContainer/SearchPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search by name..."
clear_button_enabled = true

[node name="FilterLabel" type="Label" parent="VBoxContainer/SearchPanel/HBoxContainer"]
layout_mode = 2
text = "Classification:"

[node name="ClassificationFilter" type="OptionButton" parent="VBoxContainer/SearchPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "All Classifications"
popup/item_0/id = 0

[node name="SortLabel" type="Label" parent="VBoxContainer/SearchPanel/HBoxContainer"]
layout_mode = 2
text = "Sort by:"

[node name="SortOption" type="OptionButton" parent="VBoxContainer/SearchPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Last Name"
popup/item_0/id = 0
popup/item_1/text = "First Name"
popup/item_1/id = 1
popup/item_2/text = "Classification"
popup/item_2/id = 2
popup/item_3/text = "Status"
popup/item_3/id = 3

[node name="EmployeeList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
allow_reselect = true
allow_rmb_select = true
auto_height = true
item_count = 4
item_0/text = "Smith, John (RN)"
item_1/text = "Johnson, Mary (LPN)"
item_2/text = "Davis, Robert (CA)"
item_3/text = "Wilson, Sarah (RN)"

[node name="ButtonsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer/ButtonsPanel"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
text = "Add Employee"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ButtonsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 130
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/ButtonsPanel/MarginContainer"]
layout_mode = 2
text = "Double-click an employee to view details"
